--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "redux-localstorage-simple": "^2.4.0",
     "web-vitals": "^1.1.2"
   },
+  "homepage": "https://nogi9930.github.io/time-manager/",
   "scripts": {
+    "deploy": "npm run build && gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.0"
   }
 }
