--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://nogi9930.github.io/time-manager/",
   "scripts": {
-    "deploy": "npm run build && gh-pages -d build",
+    "deploy": "npm install && npm run build && gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
